--- a/D4.css
+++ b/D4.css
@@ -6,6 +6,14 @@ body {
 
 .card-body {
     color: black;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.card-body h5 + p{
+    color: rgb(214, 163, 20);
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .navbar {
@@ -30,6 +38,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    z-index: 1;
 }
 
 .searchBar {
@@ -38,6 +47,14 @@ body {
     width: 50%;  
 }
 
-.cart {
-    overflow-x: scroll;
+#cart {
+    overflow-y: scroll;
+    height: 230px;
+    /* display: -webkit-box; */
+    -webkit-line-clamp: 1;
+    /* -webkit-box-orient: vertical; */
+}
+
+.dropdown-item {
+    padding-left: 5px;
 }
