--- a/D4.css
+++ b/D4.css
@@ -49,7 +49,7 @@ body {
 
 #cart {
     overflow-y: scroll;
-    height: 230px;
+    max-height: 230px;
     /* display: -webkit-box; */
     -webkit-line-clamp: 1;
     /* -webkit-box-orient: vertical; */
